# Game-Pattern-Visualizer

./: .gitignore  CMakeLists.txt  README.md
Game-Pattern-Visualizer/: CMakeLists.txt
Game-Pattern-Visualizer/Resources/: dialogTree.json
Game-Pattern-Visualizer/Source/: main.cpp
Game-Pattern-Visualizer/Source/Application/: Application.cpp  Application.hpp
Game-Pattern-Visualizer/Source/Components/Animation/: Animation.cpp  Animation.hpp
Game-Pattern-Visualizer/Source/Components/Button/: Button.cpp  Button.hpp
Game-Pattern-Visualizer/Source/Components/DialogBox/: DialogBox.cpp  DialogBox.hpp
Game-Pattern-Visualizer/Source/Components/TextBox/: TextBox.cpp  TextBox.hpp
Game-Pattern-Visualizer/Source/Enums/: FontID.hpp  State.hpp  TextureID.hpp
Game-Pattern-Visualizer/Source/Interfaces/: ApplicationState.hpp  Scene.hpp
Game-Pattern-Visualizer/Source/Manager/: ResourceManager.hpp  ResourceManager.inl
Game-Pattern-Visualizer/Source/Patterns/Command/: ChoiceState.hpp  Command.hpp  CommandHistory.cpp  CommandHistory.hpp  CommandPatternDemo.cpp  CommandPatternDemo.hpp  DialogTypes.hpp  MakeChoiceCommand.hpp  NextStepCommand.hpp  Scene.cpp  Scene.hpp  SceneCommandPattern.cpp  SceneCommandPattern.hpp
Game-Pattern-Visualizer/Source/Patterns/Command/DialogTree/: ChoiceState.hpp  DialogTree.cpp  DialogTree.hpp
Game-Pattern-Visualizer/Source/Patterns/Flyweight/: Enemy.cpp  Enemy.hpp  FlyweightPatternDemo.cpp  FlyweightPatternDemo.hpp  Map.cpp  Map.hpp  SceneFlyweightPattern.cpp  SceneFlyweightPattern.hpp  Terrain.cpp  Terrain.hpp  TerrainExtrinsic.cpp  TerrainExtrinsic.hpp  TerrainIntrinsic.cpp  TerrainIntrinsic.hpp
Game-Pattern-Visualizer/Source/Patterns/Flyweight/Data/: EnemyType.cpp  EnemyType.hpp
Game-Pattern-Visualizer/Source/Patterns/Observer/: Clicker.cpp  Clicker.hpp  ClickerUI.cpp  ClickerUI.hpp  Observer.hpp  ObserverPatternDemo.cpp  ObserverPatternDemo.hpp  SceneObserverPattern.cpp  SceneObserverPattern.hpp  ScoreBoard.cpp  ScoreBoard.hpp  Subject.cpp  Subject.hpp
Game-Pattern-Visualizer/Source/Patterns/Prototype/: Enemy.hpp  PrototypePatternDemo.hpp  PrototypePatternDemon.cpp  Spawner.hpp  SpawnerFor.hpp  Zombie.hpp
Game-Pattern-Visualizer/Source/States/: MenuState.cpp  MenuState.hpp
